--- a/cases/Warehouse Performance Transformation.html
+++ b/cases/Warehouse Performance Transformation.html
@@ -1,239 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
-<meta charset="UTF-8" />
-<title>Lean Six Sigma Warehouse Case</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Warehouse Optimization | Batuhan Dogan</title>
+<script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-body {
-  font-family: Inter, system-ui;
-  background:#0b0f14;
-  color:#eaeef5;
-  margin:0;
-}
-header {
-  background:#101826;
-  padding:28px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-header h1 {
-  cursor:pointer;
-  color:#60a5fa;
-}
-button {
-  background:#3b82f6;
-  color:white;
-  border:none;
-  padding:10px 18px;
-  border-radius:10px;
-  cursor:pointer;
-}
-section {
-  padding:60px 12%;
-}
-h1,h2 {color:#60a5fa}
-.card {
-  background:#111827;
-  border-radius:18px;
-  padding:24px;
-  margin-top:20px;
-}
-.grid {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
-  gap:22px;
-}
-canvas {background:#0f172a;border-radius:12px;padding:10px;}
-.kpi {
-  font-size:34px;
-  font-weight:700;
-}
-small {color:#94a3b8}
-.timeline div {
-  border-left:4px solid #3b82f6;
-  padding-left:18px;
-  margin:20px 0;
-}
-</style>
 </head>
 
-<body>
+<body class="bg-slate-50">
 
-<header>
-<h1 onclick="window.location.href='https://ozgunbatu.github.io/projects/'">Batuhan Doğan ←</h1>
-<button onclick="toggleLang()">DE / EN</button>
-</header>
-
-<section>
-<h2 id="introTitle">Executive Introduction</h2>
-<div class="card" id="introText"></div>
-</section>
-
-<section>
-<h2 id="problemTitle">Problem Statement</h2>
-<div class="card" id="problemText"></div>
-</section>
-
-<section>
-<h2 id="kpiTitle">Key KPIs</h2>
-<div class="grid card">
-<canvas id="kpiChart"></canvas>
+<!-- NAV -->
+<nav class="bg-white border-b p-4">
+<div class="max-w-6xl mx-auto flex justify-between">
+<a href="../index.html">← Home</a>
+<span class="font-black">Batuhan Dogan</span>
 </div>
+</nav>
+
+<main class="max-w-6xl mx-auto px-6 py-20">
+
+<h1 class="text-5xl font-black mb-6">Warehouse Optimization – Logistic Operations</h1>
+
+<p class="text-xl text-slate-600 mb-12">
+Applying Lean & Six Sigma principles to optimize warehouse operations, reduce inventory costs, and improve throughput efficiency.
+</p>
+
+<!-- Step 1: Problem -->
+<section class="mb-10">
+<h2 class="text-3xl font-bold mb-4">Problem</h2>
+<p class="text-slate-700">
+High operational costs and delayed order fulfillment due to inefficient warehouse layout, redundant picking paths, and uneven inventory distribution across regions. 
+</p>
 </section>
 
-<section>
-<h2 id="paretoTitle">Pareto – Error Causes</h2>
-<div class="grid card">
-<canvas id="paretoChart"></canvas>
+<!-- Step 2: Approach -->
+<section class="mb-10">
+<h2 class="text-3xl font-bold mb-4">Approach</h2>
+<p class="text-slate-700">
+Collected 1.5M transaction records from warehouse management systems (WMS) and ERP logs. Conducted:
+<ul class="list-disc ml-6 text-slate-700">
+<li>Process mapping of inbound/outbound flows</li>
+<li>Time-motion study of picking & packing</li>
+<li>Six Sigma DMAIC methodology to identify bottlenecks</li>
+<li>Lean 5S assessment for warehouse layout</li>
+<li>Simulation modeling of inventory allocation per SKU and region</li>
+</ul>
+</p>
+</section>
+
+<!-- Step 3: Recommendation -->
+<section class="mb-10">
+<h2 class="text-3xl font-bold mb-4">Recommendation</h2>
+<p class="text-slate-700">
+Redesign warehouse layout based on ABC analysis, implement batch picking for high-volume SKUs, standardize processes using Lean 5S, and apply automated alert system for low-stock items.
+</p>
+</section>
+
+<!-- Step 4: Implementation -->
+<section class="mb-10">
+<h2 class="text-3xl font-bold mb-4">Implementation</h2>
+<ul class="list-disc ml-6 text-slate-700">
+<li>Power BI dashboard for real-time inventory monitoring with regional heatmap</li>
+<li>Simulation of picking routes to minimize travel distance</li>
+<li>SQL queries automated for weekly performance reports</li>
+<li>KPI cards for throughput, picking accuracy, and inventory turnover</li>
+</ul>
+</section>
+
+<!-- KPI Cards -->
+<div class="grid md:grid-cols-4 gap-6 mb-10">
+<div class="bg-white p-6 rounded-2xl shadow text-center">
+<p class="font-bold text-xl">Throughput ↑15%</p>
 </div>
-</section>
-
-<section>
-<h2>Travel Distance vs Pick Time</h2>
-<div class="grid card">
-<canvas id="regChart"></canvas>
+<div class="bg-white p-6 rounded-2xl shadow text-center">
+<p class="font-bold text-xl">Inventory Cost ↓12%</p>
 </div>
-</section>
-
-<section>
-<h2>Throughput vs Time</h2>
-<div class="grid card">
-<canvas id="throughputChart"></canvas>
+<div class="bg-white p-6 rounded-2xl shadow text-center">
+<p class="font-bold text-xl">Picking Accuracy ↑10%</p>
 </div>
+<div class="bg-white p-6 rounded-2xl shadow text-center">
+<p class="font-bold text-xl">Order Lead Time ↓20%</p>
+</div>
+</div>
+
+<!-- Step 5: Results -->
+<section class="mb-10">
+<h2 class="text-3xl font-bold mb-4">Results</h2>
+<p class="text-slate-700">
+After implementation, warehouse efficiency improved significantly:
+<ul class="list-disc ml-6 text-slate-700">
+<li>Optimized stock allocation reduced overstock in low-demand regions</li>
+<li>Picking route optimization reduced operator travel time by 18%</li>
+<li>Lean process standardization decreased operational errors</li>
+<li>Real-time dashboard enabled proactive decision-making by operations team</li>
+</ul>
+</p>
 </section>
 
-<section>
-<h2>Recommendations & Roadmap</h2>
-<div class="card timeline" id="roadmap"></div>
-</section>
+<!-- Chart: Inventory Distribution Heatmap -->
+<div class="bg-white p-10 rounded-3xl shadow mb-16">
+<canvas id="inventoryChart"></canvas>
+</div>
 
-<footer style="text-align:center;padding:40px 0;background:#101826">
-<button onclick="window.location.href='https://ozgunbatu.github.io/projects/'">Back to Portfolio</button>
-</footer>
+<!-- Data Sources -->
+<p class="text-sm text-slate-500">
+Data sources: <a href="https://www.kaggle.com/" target="_blank">Kaggle warehouse & logistics datasets</a>, internal WMS & ERP logs.
+</p>
 
+<script src="../scripts/charts.js"></script>
 <script>
-// LANGUAGE
-let lang="EN";
-const introContent={
-EN:`Industry: FMCG Logistics<br>
-Objective: Increase picking productivity & accuracy.<br>
-Role: Industrial Engineer – analytics & redesign.<br>
-Tools: SQL, Power BI, Minitab, AutoCAD.`,
-DE:`Industrie: FMCG Logistik<br>
-Ziel: Produktivität und Qualität steigern.<br>
-Rolle: Industrial Engineer – Analyse & Prozessdesign.<br>
-Tools: SQL, Power BI, Minitab, AutoCAD.`
-};
-
-const problemContent={
-EN:`Warehouse experienced excessive walking distances, aisle congestion, high overtime costs, and picking errors causing missed outbound cut-offs.`,
-DE:`Das Lager hatte übermäßige Laufwege, Engpässe in den Gängen, hohe Überstundenkosten und Kommissionierfehler, die zu verpassten Versandzeiten führten.`
-};
-
-function toggleLang(){
- lang=lang==="EN"?"DE":"EN";
- renderContent();
-}
-
-function renderContent(){
- document.getElementById("introText").innerHTML=introContent[lang];
- document.getElementById("problemText").innerHTML=problemContent[lang];
-}
-renderContent();
-
-/* ================= KPI ================= */
-const kpiBefore = {Orders:3.3, PickTime:18.4, Distance:1.2, Accuracy:97.1};
-const kpiAfter  = {Orders:5.2, PickTime:11.9, Distance:0.7, Accuracy:99.4};
-
-new Chart(document.getElementById('kpiChart'),{
- type:'bar',
- data:{
-  labels:Object.keys(kpiBefore),
-  datasets:[
-   {label:'Before',data:Object.values(kpiBefore),backgroundColor:'#10b981'},
-   {label:'After',data:Object.values(kpiAfter),backgroundColor:'#047857'}
-  ]
- },
- options:{responsive:true,plugins:{legend:{position:'top'}}}
+// Heatmap simulation
+new Chart(inventoryChart, {
+  type: 'bar',
+  data: {
+    labels: ['North', 'South', 'East', 'West', 'Central'],
+    datasets: [{
+      label: 'Inventory Units',
+      data: [12000, 9000, 15000, 8000, 11000],
+      backgroundColor: ['#0ea5e9','#0ea5e9','#0ea5e9','#0ea5e9','#0ea5e9']
+    }]
+  },
+  options: {
+    responsive: true,
+    plugins: { legend: { display: false } },
+    scales: { y: { beginAtZero: true } }
+  }
 });
-
-/* ================= PARETO ================= */
-const paretoData=[
- {error:"Wrong SKU",count:120},
- {error:"Wrong Qty",count:90},
- {error:"Location Confusion",count:65},
- {error:"Scanner Fail",count:40},
- {error:"Damaged",count:20}
-];
-const sorted=[...paretoData].sort((a,b)=>b.count-a.count);
-const total=sorted.reduce((s,x)=>s+x.count,0);
-let cum=0;
-const cumulative=sorted.map(x=>{cum+=x.count;return Math.round(cum/total*100);});
-
-new Chart(document.getElementById('paretoChart'),{
- type:'bar',
- data:{
-  labels:sorted.map(x=>x.error),
-  datasets:[
-   {label:'Errors',data:sorted.map(x=>x.count),backgroundColor:'#3b82f6'},
-   {label:'Cumulative %',data:cumulative,type:'line',borderColor:'#facc15',tension:0.3}
-  ]
- }
-});
-
-/* ================= REGRESSION ================= */
-const walkingData=[
- {dist:0.4,time:8},{dist:0.6,time:11},{dist:0.8,time:14},
- {dist:1.0,time:17},{dist:1.2,time:19},{dist:1.5,time:24}
-];
-const xs=walkingData.map(x=>x.dist);
-const ys=walkingData.map(x=>x.time);
-const n=xs.length;
-const slope=(n*xs.reduce((s,x,i)=>s+x*ys[i],0)-xs.reduce((a,b)=>a+b,0)*ys.reduce((a,b)=>a+b,0))/
-        (n*xs.reduce((s,x)=>s+x*x,0)-Math.pow(xs.reduce((a,b)=>a+b,0),2));
-const intercept=ys.reduce((a,b)=>a+b,0)/n - slope*xs.reduce((a,b)=>a+b,0)/n;
-
-new Chart(document.getElementById('regChart'),{
- type:'scatter',
- data:{
-  datasets:[
-   {label:'Actual',data:walkingData.map(x=>({x:x.dist,y:x.time})),backgroundColor:'#f97316'},
-   {label:'Trend',type:'line',data:xs.map(x=>({x,y:slope*x+intercept})),borderColor:'#60a5fa',fill:false}
-  ]
- }
-});
-
-/* ================= THROUGHPUT ================= */
-const throughputData=[
- {day:'Mon',throughput:1500},
- {day:'Tue',throughput:1650},
- {day:'Wed',throughput:1580},
- {day:'Thu',throughput:1700},
- {day:'Fri',throughput:1750}
-];
-new Chart(document.getElementById('throughputChart'),{
- type:'line',
- data:{
-  labels:throughputData.map(x=>x.day),
-  datasets:[{label:'Orders processed',data:throughputData.map(x=>x.throughput),borderColor:'#3b82f6',tension:0.3}]
- }
-});
-
-/* ================= ROADMAP ================= */
-const roadmapSteps=[
- {p:'Phase 1 – Diagnose',t:'Pareto, VSM, regression, congestion mapping'},
- {p:'Phase 2 – Improve',t:'Slotting redesign, wave picking, poka-yoke'},
- {p:'Phase 3 – Pilot',t:'Pick-to-light, SOPs, KPI dashboards'},
- {p:'Phase 4 – Scale',t:'Roll-out all zones, training academy'},
- {p:'Phase 5 – Control',t:'SPC charts, monthly Kaizen, audits'}
-];
-
-document.getElementById('roadmap').innerHTML =
-roadmapSteps.map(x=>`<div><b>${x.p}</b><br>${x.t}</div>`).join("");
-
 </script>
 
+</main>
 </body>
 </html>
